--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,11 @@
 /* Aquí van tus estilos */
+.App {
+    
+    background-image: url(../images/colourful-night-sky-with-stars-nebula.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+ 
+    
+    
+    
+}
