--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -3,8 +3,10 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+    
     @media all and(min-width:768px){
         grid-template-columns: 1fr 1fr 1fr;
         margin: 60px;
+        margin-bottom: 400px;
     }
 }
