--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -13,16 +13,16 @@
     }
 }
 .label {
-    color: rgb(231, 171, 21);
+    color: rgb(112, 216, 216);
     font-size: 15px;
     font-weight: bold;
     text-shadow: 0.2em 0.2em 0.3em black;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Charm', cursive;
     @media all and(min-width:768px){
-        font-size: 15px;
+        font-size: 20px;
     }
     @media all and(min-width:1024px){
-        font-size: 20px;
+        font-size: 25px;
     }
 }
 
