--- a/src/styles/CharacterDetail.scss
+++ b/src/styles/CharacterDetail.scss
@@ -5,38 +5,66 @@
   background-color: rgba(42, 39, 39, 0.6);
   box-shadow: 0.3em 0.6em 0.4em rgb(1, 1, 2);
   border-radius: 5px;
-  width: 35vw;
+  width: 70vw;
   padding: 8px;
   margin-bottom: 300px;
   gap: 5px;
+  flex-wrap: wrap;
+  @media all and(min-width:768px) {
+    width: 35vw;
+    padding: 8px;
+    flex-direction: row;
+ }
 }
 
 .house-img {
-  width: 120px;
-  height: 140px;
+  width: 70px;
+  height: 90px;
+  @media all and(min-width:768px) {
+    width: 120px;
+    height: 140px;
+ }
+}
+
+.specie-img {
+  width: 20px;
 }
 
 .info-detail {
   margin-left: 20px;
+  margin-top: 20px;
+  line-height: 18px;
+  @media all and(min-width:768px) {
+    margin-left: 20px;
   margin-top: 30px;
   line-height: 23px;
+}
 }
 
 .text-detail {
   font-family: "Charm", cursive;
   color: rgb(112, 216, 216);
-  font-size: 15px;
+  font-size: 10px;
+  @media all and(min-width:768px) {
+    font-size: 15px;
+ }
 }
 .return {
   text-decoration: none;
   color: rgb(239, 247, 246);
-  width: 80px;
-  height: 30px;
+  width: 50px;
+  height: 15px;
   border-radius: 30px;
   text-align: center;
-  padding-top: 10px;
+  margin-top: 30px;
   background-color: rgba(16, 220, 192, 0.44);
   box-shadow: 0 0 3px 2px rgba(15, 108, 80, 0.749);
+  font-size: 10px;
+  @media all and(min-width:768px) {
+    width: 80px;
+    height: 30px;
+    padding-top: 10px;
+ }
 }
 .return:hover {
   animation-name: color2;
