--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -1,12 +1,29 @@
 .characterList {
-   margin: 20px;
+   margin: 15px;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px;
+    grid-template-rows:min-content;
+    gap: 15px;
+    margin-bottom: 450px;
     
     @media all and(min-width:768px){
-        grid-template-columns: 1fr 1fr 1fr;
-        margin: 60px;
-        margin-bottom: 400px;
+        grid-template-columns: 1fr 1fr;
+      
+      
     }
+    @media all and(min-width:1024px){
+      grid-template-columns: 1fr 1fr 1fr;
+
+     
+  }
+}
+
+.msg-error {
+  font-family: 'Charm', cursive;
+  color:rgb(144, 240, 240);
+  font-size: 25px;
+  text-shadow: 0.2em 0.2em 0.3em black;
+  grid-column: 2/3;
+  margin-bottom: 450px;
+  
 }
