--- a/src/styles/CharacterDetail.scss
+++ b/src/styles/CharacterDetail.scss
@@ -1,44 +1,84 @@
+
+.container-details {
+  height: 100vh;
+}
 .character-detail {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   background-color: rgba(42, 39, 39, 0.6);
   box-shadow: 0.3em 0.6em 0.4em rgb(1, 1, 2);
   border-radius: 5px;
   width: 70vw;
   padding: 8px;
-  margin-bottom: 300px;
   gap: 5px;
-  flex-wrap: wrap;
+  //flex-wrap: wrap;
   @media all and(min-width:768px) {
-    width: 35vw;
+    width: 60vw;
+    margin-top: 30px;
     padding: 8px;
-    flex-direction: row;
+   
+ }
+ @media all and(min-width:1024px) {
+  width: 30vw;
+  margin-top: 20px;
+  padding: 8px;
+}
+}
+
+.img-detail {
+  margin-top: 10px;
+  width: 80px;
+  height: 100px;
+  border-radius: 3px;
+  border: 2px solid rgb(112, 216, 216);
+  @media all and(min-width:768px) {
+    width: 180px;
+    height: 230px;
  }
 }
 
 .house-img {
-  width: 70px;
-  height: 90px;
+  width: 50px;
+  height: 60px;
   @media all and(min-width:768px) {
-    width: 120px;
-    height: 140px;
+    margin-top: 10px;
+    width: 80px;
+    height: 100px;
  }
+ @media all and(min-width:1024px) {
+  width: 90px;
+    height: 110px;
 }
 
-.specie-img {
+}
+.status {
+  display: flex;
+  flex-direction: row;
+}
+.icon-alive {
   width: 20px;
+  @media all and(min-width:768px) {
+    width: 30px;
+ }
+ @media all and(min-width:1024px) {
+  width: 35px;
+    
+}
 }
 
 .info-detail {
-  margin-left: 20px;
-  margin-top: 20px;
+  margin-left: 10px;
+  margin-top: 10px;
   line-height: 18px;
   @media all and(min-width:768px) {
-    margin-left: 20px;
-  margin-top: 30px;
-  line-height: 23px;
+  margin-top: 20px;
+  line-height: 26px;
 }
+@media all and(min-width:1024px) {
+  line-height: 30px;
+ }
 }
 
 .text-detail {
@@ -46,24 +86,36 @@
   color: rgb(112, 216, 216);
   font-size: 10px;
   @media all and(min-width:768px) {
-    font-size: 15px;
+    font-size: 18px;
+ }
+ @media all and(min-width:1024px) {
+  font-size: 20px;
  }
 }
 .return {
   text-decoration: none;
   color: rgb(239, 247, 246);
   width: 50px;
-  height: 15px;
+  height: 20px;
   border-radius: 30px;
   text-align: center;
-  margin-top: 30px;
   background-color: rgba(16, 220, 192, 0.44);
   box-shadow: 0 0 3px 2px rgba(15, 108, 80, 0.749);
-  font-size: 10px;
+  font-size: 9px;
+  padding-top: 4px;
   @media all and(min-width:768px) {
     width: 80px;
     height: 30px;
-    padding-top: 10px;
+    padding-top: 7px;
+    font-size: 15px;
+    margin-bottom: 15px;
+ }
+ @media all and(min-width:1024px) {
+  width: 100px;
+  height: 40px;
+  padding-top: 10px;
+  font-size: 15px;
+ 
  }
 }
 .return:hover {
