--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -4,15 +4,16 @@
     grid-template-columns: 1fr;
     grid-template-rows:min-content;
     gap: 15px;
-    margin-bottom: 450px;
-    
     @media all and(min-width:768px){
         grid-template-columns: 1fr 1fr;
+        margin-top: 60px;
       
       
     }
     @media all and(min-width:1024px){
       grid-template-columns: 1fr 1fr 1fr;
+      margin-top: 60px;
+      
 
      
   }
@@ -21,9 +22,17 @@
 .msg-error {
   font-family: 'Charm', cursive;
   color:rgb(144, 240, 240);
-  font-size: 25px;
+  font-size: 15px;
   text-shadow: 0.2em 0.2em 0.3em black;
   grid-column: 2/3;
-  margin-bottom: 450px;
+  height: 100vh;
+  @media all and(min-width:768px){
+    grid-column: 1/3;
+  
+}
+@media all and(min-width:1024px){
+  grid-column: 1/4;
+
+}
   
 }
