--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -27,6 +27,7 @@
 }
 
 .input-name {
+    
     width: 150px;
     height: 20px;
     border-radius: 4px;
@@ -35,13 +36,24 @@
     @media all and(min-width:768px){
         width: 200px;
         height: 20px;
+        margin-top: 7px;
+    }
+    @media all and(min-width:1024px){
+        margin-top: 13px;
     }
 }
 
 .select {
+    
     width: 150px;
     height: 24px;
     border-radius: 4px;
     opacity: 70%;
+    @media all and(min-width:768px){
+        margin-top: 5px;
+    }
+    @media all and(min-width:1024px){
+        margin-top: 10px;
+    }
     
 }
