--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -4,8 +4,16 @@
     justify-content: center;
     align-items: center;
     &-img{
-        margin-top:30px;
+        margin-top:20px;
+        width: 60%;
+        @media all and(min-width:768px){
+            margin-top:20px;
         width: 40%;
+        }
+        @media all and(min-width:1024px){
+            margin-top:20px;
+        width: 20%;
+        }
       
     }
 }
