--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -1,38 +1,30 @@
 .characterList {
-   margin: 15px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows:min-content;
-    gap: 15px;
-    @media all and(min-width:768px){
-        grid-template-columns: 1fr 1fr;
-        margin-top: 60px;
-      
-      
-    }
-    @media all and(min-width:1024px){
-      grid-template-columns: 1fr 1fr 1fr;
-      margin-top: 60px;
-      
-
-     
+  margin: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content;
+  gap: 15px;
+  @media all and(min-width:768px) {
+    grid-template-columns: 1fr 1fr;
+    margin-top: 60px;
+  }
+  @media all and(min-width:1024px) {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 60px;
   }
 }
 
 .msg-error {
-  font-family: 'Charm', cursive;
-  color:rgb(144, 240, 240);
+  font-family: "Charm", cursive;
+  color: rgb(144, 240, 240);
   font-size: 15px;
   text-shadow: 0.2em 0.2em 0.3em black;
   grid-column: 2/3;
   height: 100vh;
-  @media all and(min-width:768px){
+  @media all and(min-width:768px) {
     grid-column: 1/3;
-  
-}
-@media all and(min-width:1024px){
-  grid-column: 1/4;
-
-}
-  
+  }
+  @media all and(min-width:1024px) {
+    grid-column: 1/4;
+  }
 }
